Changes for 1.5
* Fixing bugs in 'example' maps: Tic Tac Toe, King's Table, and Sliding Tiles 8-number. (veqryn)


Changes for 1.4
* Adding politicstext.properties for Napoleonic Empires. (veqryn)

* Massive update to Napoleonic Empires: FFA, to allow it to use Politics. (veqryn)

* Updating Pact of Steel 2 and Pacific test xmls. (veqryn)

* Added scroll bars to select casualties dialog panel. (veqryn)

* Sorted political actions based on player, type, and name. (veqryn)

* Capped Politics ui actions, and added scroll bars to the bottom button part. (veqryn)

* Fixed rendering issue where nations that were neutral to each other still caused red markup when in the same territory or sea zone. (frigoref)

* Fixed bug where victory city victories happened in FFA maps according to the current alliance rather than the player's alliance tracker. (veqryn)

* Added "upkeepCost" as an attachment for RelationshipTypeAttachment, which allows you to have a cost in order to maintain a relationship. (veqryn)

* Changed "invert" in rules attachments, trigger attachments, and political attachments, to work as a real logical negation. Now correctly follows boolean math. (veqryn)

* Added roundValue to relationshipInitialize, which is the beginning round a relationship starts out at. This should normally be "1", but if you have certain conditions set up, you may wish to change this to a negative or positive number to reflect what round you would like the condition to be true on. (veqryn)

* Made AI behavior towards politics to be a bit more random, allowing it to take any political action so long as it has 10x the amount of PUs as the political action's cost. (veqryn)

* Abstracting isMet logic for rules attachments into a single place, areConditionsMet, in RulesAttachment. (veqryn)

* Changed unitPresence to allow inputting of multiple units on one line for an OR relationship between those units. (veqryn)
