@@ -1,4 +1,6 @@
 Changes for 1.5
+* Fixing bugs in alliance tracker related to players not being in an alliance. (veqryn)
+
 * Fixing bugs in 'example' maps: Tic Tac Toe, King's Table, and Sliding Tiles 8-number. (veqryn)
 
 
